--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Digital Clock</title>
     <style>
         * {
             margin: 0;
@@ -28,8 +28,7 @@
             height: 200px;
             width: 300px;
             border-radius: 30px;
-            padding: 30px;
-
+            padding: 30px; 
             border: 5px solid transparent; 
             background:
                 linear-gradient(#1e1e1e, #1e1e1e) padding-box, 
