--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
 
 <body>
     <div class="gradient-border">
+        <p style="color:yellow; font-weight:bold;">
+            Demo page only — no data is collected.
+        </p>
+
         <div class="container">
             <h1 class="heading">The Current time is </h1>
             <h1 id="time"></h1>
